<resources>
    <string name="app_name">Leaf Admin</string>
    <string name="title_activity_add_covering">AddCovering</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="adding_to_database">Adding to database:</string>
    <string name="add_a_covering">Add a covering</string>
    <string name="add_a_pesticide">Add a pesticide</string>
    <string name="inspecting_database">Inspecting database:</string>
    <string name="view_coverings">View Coverings</string>
    <string name="view_pesticides">View Pesticides</string>
    <string name="sign_out">Sign out</string>
    <string name="enter_covering_name">Enter covering name:</string>
    <string name="default_covering_name">Test covering</string>
    <string name="enter_covering_uv_fen">Enter covering UV Fen:</string>
    <string name="default_uv_fen">0.03</string>
    <string name="enter_covering_uv_rate">Enter covering UV Rate:</string>
    <string name="default_uv_rate">30</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="default_reference_temperature">20</string>
    <string name="enter_reference_temperature">Enter Reference Temperature:</string>
    <string name="default_reference_vapour_pressure">0.00357020501337738</string>
    <string name="enter_reference_vapour_pressure">Enter Reference Vapour Pressure:</string>
    <string name="default_pesticide_name">Test pesticide</string>
    <string name="enter_pesticide_name">Enter pesticide name:</string>
    <string name="are_you_sure_you_want_to_delete_this_covering">Are you sure you want to delete this covering?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="are_you_sure_you_want_to_delete_this_pesticide">Are you sure you want to delete this pesticide?</string>
    <string name="edit_covering_data">Edit covering data:</string>
    <string name="name">Name:</string>
    <string name="uv_fen">UV Fen:</string>
    <string name="uv_rate">UV Rate:</string>
    <string name="update">Update</string>
    <string name="reference_temperature">Reference Temperature:</string>
    <string name="reference_vapour_pressure">Reference Vapour Pressure:</string>
    <string name="edit_pesticide_data">Edit pesticide data:</string>
    <string name="coverings">Coverings:</string>
    <string name="pesticides">Pesticides:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="itemSplit">\\}\\{</string>
    <string name="id_token_for_gso">794829267701-bba4q60202usjbbkk7hfldd3v24n60p6.apps.googleusercontent.com</string>
    <string name="coverings_database_collection">coverings</string>
    <string name="pesticides_database_collection">pesticides</string>
    <string name="default_molar_mass">277.23</string>
    <string name="enter_molar_mass">Enter Molar Mass</string>
    <string name="molar_mass">Molar Mass</string>
</resources>