<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adding_to_database"
                android:layout_marginTop="150dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/addCoveringButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_a_covering"
                app:layout_constraintTop_toBottomOf="@+id/title"/>

            <Button
                android:id="@+id/addPesticideButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_a_pesticide"
                app:layout_constraintTop_toBottomOf="@+id/addCoveringButton"/>

            <TextView
                android:id="@+id/middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inspecting_database"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addPesticideButton" />

            <Button
                android:id="@+id/viewCoveringsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_coverings"
                app:layout_constraintTop_toBottomOf="@+id/middle"/>

            <Button
                android:id="@+id/viewPesticidesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_pesticides"
                app:layout_constraintTop_toBottomOf="@+id/viewCoveringsButton"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/viewPesticidesButton"/>

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:backgroundTint="@android:color/holo_red_light"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>