<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCovering">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_covering_data"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintTop_toBottomOf="@+id/title"/>

            <EditText
                android:id="@+id/enterNewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintTop_toBottomOf="@+id/nameLabel"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/uvFenLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uv_fen"
                app:layout_constraintTop_toBottomOf="@+id/enterName"/>

            <EditText
                android:id="@+id/enterNewUVFen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintTop_toBottomOf="@+id/uvFenLabel"
                android:autofillHints=""
                android:inputType="numberDecimal"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/uvRateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uv_rate"
                app:layout_constraintTop_toBottomOf="@+id/enterUVFen"/>

            <EditText
                android:id="@+id/enterNewUVRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintTop_toBottomOf="@+id/uvRateLabel"
                android:autofillHints=""
                android:inputType="numberDecimal"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintTop_toBottomOf="@+id/enterUVRate"/>

            <Button
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                app:layout_constraintTop_toBottomOf="@+id/updateButton"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>